add several links to make the site more robust #2

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,3 +84,12 @@
 .animate-subtle-zoom {
   animation: subtle-zoom 20s infinite ease-in-out;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
